--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     <header class="no-user-select">
       <!-- sticky header -->
       <div class="container-nav sticky">
-        <img src="./assets/images/keiko-logo.png" class="logo" alt="Keiko Corp" />
+        <a href="./index.html">
+          <img src="./assets/images/keiko-logo.png" class="logo" alt="Keiko Corp" />
+        </a>
         <nav class="navbar">
           <label class="toggle-bar-mobile" id="toggle-bar">
             <input type="checkbox" id="toggle-checkbox" />
