--- a/job-listing.html
+++ b/job-listing.html
@@ -19,7 +19,9 @@
       <h2>Looking for Talented Professionals</h2>
       <h1>Current Job Listings at Keiko Corp
         <span>
-          <img src="./assets/images/keiko-logo.png" alt="Keiko Corp logo">
+          <a href="./index.html">
+            <img src="./assets/images/keiko-logo.png" class="logo" alt="Keiko Corp" />
+          </a>
         </span></h1>
     </section>
     <section class="job-posting-info">
