--- a/login.html
+++ b/login.html
@@ -34,7 +34,9 @@
 
           <ul class="menu">
             <li>
-              <img src="./assets/images/keiko-logo.png" class="logo" alt="Keiko Corp" />
+              <a href="./index.html">
+                <img src="./assets/images/keiko-logo.png" class="logo" alt="Keiko Corp" />
+              </a>
             </li>
             <li>
               <a href="./index.html">
